--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nuxt": "3.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "pinia": "^2.0.24",
+    "@pinia/nuxt": "^0.4.2"
   }
 }
