--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
+    "@types/jest": "^29.2.3",
     "autoprefixer": "^10.4.13",
     "nuxt": "3.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.2",
+    "jest": "^29.3.1",
     "pinia": "^2.0.24",
-    "@pinia/nuxt": "^0.4.2"
+    "ts-jest": "^29.0.3"
   }
 }
